--- a/Legion of OS/Legion.Core/Core.csproj
+++ b/Legion of OS/Legion.Core/Core.csproj
@@ -57,7 +57,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json">
-      <HintPath>..\Vendor\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\Zeno\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
